# feedbot

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.cloud.yml  docker-compose.override.yml.example  docker-compose.yml  install.sh  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_chat_link_tokens.py  0003_roles_invites_members.py  0004_project_llm_settings.py  0005_feedback_delivery_tracking.py  0006_sessions_audit_pkce.py  0007_instance_config.py  0008_subscriptions.py  0009_stripe_processed_events.py
apps/installer-host/: Dockerfile  build.sh  package.json
apps/marketing/: .gitignore  Dockerfile  astro.config.mjs  package.json  pnpm-lock.yaml
apps/marketing/public/.well-known/: security.txt
apps/marketing/scripts/: generate-og.mjs
apps/marketing/src/: content.config.ts
apps/marketing/src/components/: SiteFooter.astro  SiteNav.astro  ThemeScripts.astro
apps/marketing/src/content/docs/: introduction.mdx  pricing.mdx  quickstart-cloud.mdx  quickstart-selfhost.mdx
apps/marketing/src/pages/: index.astro  pricing.astro
apps/marketing/src/styles/: landing.css
apps/web/: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  entrypoint.sh  eslint.config.js  index.html  nginx.conf.template  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
apps/web/public/: config.json
apps/web/src/: main.tsx  routeTree.gen.ts
apps/web/src/components/: theme-toggle.tsx
apps/web/src/components/billing/: usage-banner.tsx
apps/web/src/components/layout/: app-shell.tsx  error-screen.tsx  not-found.tsx
apps/web/src/i18n/: index.ts
apps/web/src/lib/: api.ts  auth.ts  billing.ts  config.ts  errors.test.ts  errors.ts  query-client.ts  query-keys.test.ts  query-keys.ts  theme.ts  types.test.ts  types.ts
apps/web/src/routes/: __root.tsx  index.tsx
apps/web/src/styles/: globals.css
apps/web/src/types/: api.ts
caddy/: Caddyfile  Caddyfile.cloud
docs/: ARCHITECTURE.md  DEPLOY-COOLIFY.md  DEPLOY-VM.md  DEPLOYMENT.md  E2E.md
docs/assets/: install.webm
scripts/: seed.py  test_feedbot_cli.sh  test_install_sh.sh
scripts/demo/: README.md  install-demo.sh  install.tape
site/: .dockerignore  Caddyfile  Dockerfile  README.md  astro.config.mjs  package.json  pnpm-lock.yaml
site/public/: robots.txt
site/src/content/docs/: cloud.mdx  index.mdx  pricing.mdx  self-host.mdx
(+64 files in other folders)
