[project]
name = "feedbot"
version = "0.1.0"
description = "Turn your community chat into a structured product feedback pipeline, with first-class MCP support for Claude Code."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Feedbot contributors" }]

[tool.uv.workspace]
members = [
    "packages/feedbot-core",
    "packages/feedbot-api",
    "packages/feedbot-bot",
    "packages/feedbot-mcp",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# B008 is FastAPI's idiomatic `Depends()` / `Header()` in defaults — keep it.
# B904 (raise-from) is noise for HTTPException re-raises.
ignore = ["B008", "B904"]

[tool.ruff.lint.per-file-ignores]
# conftest sets DATABASE_URL etc *before* importing feedbot modules so the
# CoreSettings cache picks up the test DB; this is a deliberate top-of-module
# side-effect ordering, not an E402 violation.
"packages/feedbot-api/tests/conftest.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
asyncio_mode = "auto"
